# cpio

./: .gitignore  Makefile.am  NEWS  README  README-alpha  README-hacking  bootstrap  bootstrap.conf  configure.ac  gnulib.modules  mingw.m4  sysdep.m4
am/: ax_compile_check_rettype.m4  pack.m4
doc/: .gitignore  Makefile.am  cpio.1  cpio.texi  gendocs.sh  gendocs_template  mt.1
lib/: Makefile.am
po/: POTFILES.in
src/: .gitignore  Makefile.am  arcdump.c  copyin.c  copyout.c  copypass.c  cpio.h  cpiohdr.h  defer.c  defer.h  dstring.c  dstring.h  extern.h  fatal.c  filemode.c  filetypes.h  global.c  idcache.c  main.c  makepath.c  mt.c  tar.c  tar.h  tarhdr.h  userspec.c  util.c
tests/: .gitignore  CVE-2015-1197.at  CVE-2019-14866.at  Makefile.am  atlocal.in  big-block-size.at  inout.at  interdir.at  linktime.at  linktime01.at  setstat01.at  setstat02.at  setstat03.at  setstat04.at  setstat05.at  sizemax.c  symlink-bad-length.at  symlink-long.at  symlink-to-stdout.at  symlink.at  testsuite.at  version.at
